// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Patient resource 1`] = `
{
  "active": true,
  "address": [
    {
      "city": "Anytown",
      "country": "USA",
      "line": [
        "123 Main St",
      ],
      "postalCode": "12345",
      "state": "CA",
      "use": "home",
    },
  ],
  "birthDate": "1974-12-25",
  "gender": "male",
  "id": "pt-1",
  "identifier": [
    {
      "system": "http://hospital.example.org/identifiers/patient",
      "use": "official",
      "value": "12345",
    },
  ],
  "name": [
    {
      "family": "Smith",
      "given": [
        "John",
        "Jacob",
      ],
      "prefix": [
        "Mr.",
      ],
      "use": "official",
    },
  ],
  "resourceType": "Patient",
  "telecom": [
    {
      "system": "phone",
      "use": "home",
      "value": "555-555-5555",
    },
    {
      "system": "email",
      "use": "work",
      "value": "john.smith@example.com",
    },
  ],
}
`;

exports[`Observation resource 1`] = `
{
  "category": [
    {
      "coding": [
        {
          "code": "laboratory",
          "display": "Laboratory",
          "system": "http://terminology.hl7.org/CodeSystem/observation-category",
        },
      ],
      "text": "Laboratory",
    },
  ],
  "code": {
    "coding": [
      {
        "code": "15074-8",
        "display": "Glucose [Moles/volume] in Blood",
        "system": "http://loinc.org",
      },
    ],
    "text": "Blood glucose measurement",
  },
  "dataAbsentReason": {
    "coding": [
      {
        "code": "not-performed",
        "system": "http://terminology.hl7.org/CodeSystem/data-absent-reason",
      },
    ],
  },
  "effectiveDateTime": "2023-03-15T09:30:00Z",
  "id": "glucose-obs-1",
  "issued": "2023-03-15T10:15:00Z",
  "referenceRange": [
    {
      "high": {
        "code": "mmol/L",
        "system": "http://unitsofmeasure.org",
        "unit": "mmol/L",
        "value": 6.2,
      },
      "low": {
        "code": "mmol/L",
        "system": "http://unitsofmeasure.org",
        "unit": "mmol/L",
        "value": 3.1,
      },
      "text": "3.1 to 6.2 mmol/L",
    },
  ],
  "resourceType": "Observation",
  "status": "final",
  "subject": {
    "display": "John Smith",
    "reference": "Patient/pt-1",
  },
  "valueQuantity": {
    "code": "mmol/L",
    "system": "http://unitsofmeasure.org",
    "unit": "mmol/L",
    "value": 6.3,
  },
}
`;

exports[`Bundle with resources 1`] = `
{
  "entry": [
    {
      "fullUrl": "urn:uuid:pt-1",
      "resource": {
        "active": true,
        "address": [
          {
            "city": "Anytown",
            "country": "USA",
            "line": [
              "123 Main St",
            ],
            "postalCode": "12345",
            "state": "CA",
            "use": "home",
          },
        ],
        "birthDate": "1974-12-25",
        "gender": "male",
        "id": "pt-1",
        "identifier": [
          {
            "system": "http://hospital.example.org/identifiers/patient",
            "use": "official",
            "value": "12345",
          },
        ],
        "name": [
          {
            "family": "Smith",
            "given": [
              "John",
              "Jacob",
            ],
            "prefix": [
              "Mr.",
            ],
            "use": "official",
          },
        ],
        "resourceType": "Patient",
        "telecom": [
          {
            "system": "phone",
            "use": "home",
            "value": "555-555-5555",
          },
          {
            "system": "email",
            "use": "work",
            "value": "john.smith@example.com",
          },
        ],
      },
    },
    {
      "fullUrl": "urn:uuid:glucose-obs-1",
      "resource": {
        "category": [
          {
            "coding": [
              {
                "code": "laboratory",
                "display": "Laboratory",
                "system": "http://terminology.hl7.org/CodeSystem/observation-category",
              },
            ],
            "text": "Laboratory",
          },
        ],
        "code": {
          "coding": [
            {
              "code": "15074-8",
              "display": "Glucose [Moles/volume] in Blood",
              "system": "http://loinc.org",
            },
          ],
          "text": "Blood glucose measurement",
        },
        "dataAbsentReason": {
          "coding": [
            {
              "code": "not-performed",
              "system": "http://terminology.hl7.org/CodeSystem/data-absent-reason",
            },
          ],
        },
        "effectiveDateTime": "2023-03-15T09:30:00Z",
        "id": "glucose-obs-1",
        "issued": "2023-03-15T10:15:00Z",
        "referenceRange": [
          {
            "high": {
              "code": "mmol/L",
              "system": "http://unitsofmeasure.org",
              "unit": "mmol/L",
              "value": 6.2,
            },
            "low": {
              "code": "mmol/L",
              "system": "http://unitsofmeasure.org",
              "unit": "mmol/L",
              "value": 3.1,
            },
            "text": "3.1 to 6.2 mmol/L",
          },
        ],
        "resourceType": "Observation",
        "status": "final",
        "subject": {
          "display": "John Smith",
          "reference": "Patient/pt-1",
        },
        "valueQuantity": {
          "code": "mmol/L",
          "system": "http://unitsofmeasure.org",
          "unit": "mmol/L",
          "value": 6.3,
        },
      },
    },
  ],
  "id": "bundle-1",
  "resourceType": "Bundle",
  "type": "collection",
}
`;
